<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@color/cardview_shadow_start_color">

    <android.support.v7.widget.CardView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            tools:context="com.dg.redditswipe.MainActivity">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/welcome_to_redditswipe"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/view_random_posts_from_n_your_favorite_subreddits"
                android:textSize="18sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/swipe_up_to_upvote_the_post"
                android:textSize="18sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/swipe_down_to_downvote_the_post"
                android:textSize="18sp"
                android:gravity="center"/>

            <Button android:id="@+id/signin"
                android:text="@string/sign_in_with_reddit"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:onClick="startSignIn"
                style="@style/Widget.AppCompat.Button.Colored"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight=".5" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
